--- a/home.html
+++ b/home.html
@@ -39,11 +39,11 @@
             </p>
         </div>
         <div class="min-h-[200px] mx-auto  max-w-lg  grid grid-cols-3 gap-4 p-4 ">
-            <div class="text-center border-2 border-gray-300 rounded-lg  p-3">
+            <div id="add-button" class="text-center border-2 border-gray-300 rounded-lg  p-3">
                 <img class="mx-auto" src="assets/wallet1.png" alt="">
                 <h2>Add Money</h2>
             </div>
-            <div class="text-center border-2 border-gray-300 rounded-lg p-3">
+            <div id="cash-out-button" class="text-center border-2 border-gray-300 rounded-lg p-3">
                 <img class="mx-auto" src="assets/wallet1.png" alt="">
                 <h2>Cashout</h2>
             </div>
@@ -67,7 +67,7 @@
     </div>
     <div class="allFormSection max-w-lg mx-auto">
         <!-- Add money -->
-        <div>
+        <div id="add-money-parent">
             <h1>Add Money</h1>
             <form action="" class="bg-white rounded-2xl p-8 ">
                 <div>
@@ -98,6 +98,10 @@
                     <button id="add-money-btn" class="btn bg-[#0874F2] text-white mt-5 w-full rounded-3xl">Add Money</button>
                 </div>
             </form>
+        </div>
+
+        <div id="cash-out-parent" class="Cash Out">
+            <h1 class="text-2xl font-bold">Cash Out Section Section Started Hear</h1>
         </div>
     </div>
 
